Mobile Overflow x fix

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -74,7 +74,7 @@ body {
     padding-top: 10px;
     background-color: $light;
     z-index: 900;
-    transition: right ease-in-out 0.4s;
+    transition: right ease-in-out 0.5s;
   }
 
   #close-nav-icon {
